--- a/src/assets/style/blocks/_onboard.scss
+++ b/src/assets/style/blocks/_onboard.scss
@@ -44,6 +44,18 @@
       //height: calc(100vh - 1rem) !important;
       max-height: 100vh !important;
       border-radius: 0 !important;
+
+
+      /* Avoid Chrome to see Safari hack */
+      @supports (-webkit-touch-callout: none) {
+        /* The hack for Safari */
+        //noinspection CssInvalidPropertyValue
+        max-height: -webkit-fill-available;
+        //noinspection CssInvalidPropertyValue
+        height: -webkit-fill-available;
+      }
+
+
       //flex-flow: column;
       //display: flex;
       //justify-content: space-between;
