--- a/src/assets/style/vars/_variables.scss
+++ b/src/assets/style/vars/_variables.scss
@@ -79,6 +79,9 @@ $minRouteHeightWithExtra: calc(100vh - 200px);
 
 /* Responsive */
 $mobile: 768px;
+$tablet: 991px;
+$notebook: 1000px;
+$desktop: 1201px;
 $maxWidth: 1370px;
 $biggestWidth: 1920px;
 
