--- a/src/assets/style/_mobile-layout.scss
+++ b/src/assets/style/_mobile-layout.scss
@@ -2,7 +2,7 @@
   html {
     box-sizing: border-box;
   }
-  body.inkline.-light {
+  body.inkline {
     min-height: 100vh;
     height: 100vh;
 
@@ -37,6 +37,10 @@
         }
 
       }
+    }
+    footer.layout-footer
+    {
+      height: 4.5rem;
     }
   }
 
@@ -88,9 +92,9 @@
       margin: 0 !important;
     }
 
-    .bn-onboard-custom.bn-onboard-icon-button {
-      padding: .5rem;
-      margin: 0.25rem 0;
+    button.bn-onboard-custom.bn-onboard-icon-button {
+      padding: 0 !important;
+      margin: 0 0 .25rem !important;
     }
   }
 
@@ -159,10 +163,6 @@ body {
 }
 
 
-footer.layout-footer {
-  min-height: 80px;
-  background: transparent;
-}
 
 header.indexHeader {
   min-height: 60px;
@@ -175,12 +175,6 @@ header > .container .headerWrapper img.zkwallet-logo {
 main > div.mobileOnly {
   display: none;
 }
-
-
-footer.layout-footer._padding-top-1.mainFooter {
-  min-height: 80px;
-}
-
 
 section.bn-onboard-custom.bn-onboard-modal-selected-wallet {
   display: flex;
@@ -205,7 +199,7 @@ footer.bn-onboard-custom.bn-onboard-modal-selected-wallet-footer {
     margin-bottom: 0 !important;
   }
 
-  div.bn-onboard-custom.bn-onboard-modal-content-close.svelte-rntogh {
+  div.bn-onboard-custom.bn-onboard-modal-content-close {
     top: 1rem;
     right: 1rem;
     width: 20px;
@@ -256,7 +250,6 @@ aside.bn-onboard-custom.bn-onboard-modal {
 
 main.defaultLayout {
   padding-bottom: 80px !important;
-  max-height: calc(80px);
 }
 
 section.layoutContent {
@@ -300,7 +293,7 @@ section.layoutContent {
 
 
 @media (max-width: $mobile) {
-  ._mobile-nomargin {
+  ._mobile-no-margin {
     margin: 0.25rem 0 0 !important;
   }
   .successBlock .infoBlockItem {
@@ -316,6 +309,7 @@ section.layoutContent {
     margin: 0 auto 0;
     padding: 0;
   }
+
   //.successBlock .infoBlockItem.smaller .amount
   .dappPageWrapper {
     width: calc(100vw - .5rem);
