--- a/src/assets/style/blocks/_onboard.scss
+++ b/src/assets/style/blocks/_onboard.scss
@@ -213,11 +213,15 @@
       }
 
       .bn-onboard-custom.bn-onboard-select-info-container {
-        margin: 1rem 0 0.5rem;
-        padding: 0.75rem 0 0.5rem;
+        margin: 0.25rem 0 0.5rem;
+        padding: 0.5rem 0 0;
         //margin: 1rem .5rem;
         //padding: 0.75rem .5rem;
         border-top: 0.5px solid $lightViolet;
+        span.bn-onboard-select-wallet-info
+        {
+          margin-top: .4rem;
+        }
       }
 
       .bn-onboard-modal-content-close {
@@ -246,7 +250,7 @@
 }
 
 #walletconnect-wrapper .walletconnect-modal__base {
-  @media (max-height: 700px) {
+  @media (max-height: $mobile) {
     max-width: 300px;
   }
 }
