--- a/src/assets/style/_default.scss
+++ b/src/assets/style/_default.scss
@@ -4,7 +4,6 @@
   width: 100%;
   height: max-content;
   min-height: 100vh;
-  overflow: hidden;
 
   /* Avoid Chrome to see Safari hack */
   @supports (-webkit-touch-callout: none) {
@@ -70,13 +69,6 @@ input[type="number"] {
   background-color: transparentize($color: $gray, $amount: 0.8);
   width: 100%;
   height: 1px;
-}
-
-.desktopOnly {
-
-  @media screen and (max-width: $mobile) {
-    display: none;
-  }
 }
 
 body.inkline {
@@ -320,7 +312,7 @@ button.-lg.-circle {
 
     .header
     {
-      background: $mediumViolet !important;
+      background: $modal-background-dark !important;
     }
 
     .close .icon {
@@ -401,11 +393,10 @@ button.-lg.-circle {
     }
 
     .form-input-append {
-      //background-color: transparent !important;
+      background-color: transparent !important;
 
       &:hover {
-        //background-color: rgba(0, 0, 0, 0.01961) !important;
-        background-color: $shadowColor3 !important;
+        background-color: rgba(0, 0, 0, 0.01961) !important;
       }
     }
   }
@@ -423,11 +414,10 @@ button.-lg.-circle {
     }
 
     .form-input-append {
-      background-color: $mediumViolet !important;
+      background-color: transparent !important;
 
       &:hover {
-        background-color: $darkMain !important;
-        color: $light;
+        background-color: $mediumViolet !important;
       }
     }
   }
@@ -539,114 +529,5 @@ button.-lg.-circle {
     grid-gap: 10px;
     grid-template-columns: 100%;
     grid-template-rows: repeat(2, 1fr);
-  }
-}
-
-@media (min-width: $mobile) {
-  .dappPageWrapper {
-    min-width: 505px;
-
-    .tileBlock {
-      width: 90%;
-      max-width: 505px;
-      height: auto;
-      min-height: 500px;
-      //margin-top: 15px;
-      //margin-top: 35px;
-      margin-right: auto;
-      margin-left: auto;
-      padding: 20px;
-      border-radius: $borderRadius;
-      box-shadow: 4px 4px 8px 0 rgba(11, 52, 102, 0.02);
-      transition: background-color $transition1;
-
-      &.accountBlock {
-        min-height: 0;
-      }
-
-      .tileHeadline {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        margin: 0;
-        padding-bottom: 20px;
-        font-weight: 400;
-        font-family: $firaSans;
-        text-align: center;
-
-        &.withBtn {
-          display: grid;
-          grid-template-rows: 100%;
-          grid-template-columns: 40px 1fr;
-          align-items: center;
-          padding-right: 40px;
-        }
-
-        @media (max-width: $mobile) {
-          font-size: 22px;
-
-          &.withBtn {
-            grid-template-columns: 30px 1fr;
-            padding-right: 30px;
-
-            .returnBtn i {
-              width: 30px;
-              height: 30px;
-              font-size: 16px;
-              line-height: 30px;
-            }
-          }
-        }
-
-        i {
-          display: block;
-          width: 25px;
-          height: 25px;
-          margin-left: 10px;
-          font-size: 11px;
-          line-height: 26px;
-          background: transparentize($color: $gray, $amount: 0.7);
-          border-radius: 50%;
-          transform: translateY(1px);
-          cursor: pointer;
-          opacity: 0.9;
-          transition: background-color $transition1;
-
-          &:hover {
-            background: transparentize($color: $gray, $amount: 0.5);
-          }
-        }
-
-        .returnBtn {
-          display: block;
-          text-decoration: none;
-
-          i {
-            width: 40px;
-            height: 40px;
-            margin-left: 0;
-            font-size: 20px;
-            line-height: 40px;
-            transition: color $transition1;
-          }
-        }
-      }
-
-      .tileText {
-        margin: 5px 0;
-        font-size: 16px;
-        text-align: center;
-      }
-    }
-
-    .tileTextBg {
-      margin: 5px 0;
-      padding: 12px 15px;
-      font-size: 15px;
-      text-align: center;
-      border: 1px solid;
-      border-radius: $borderRadiusMd;
-    }
   }
 }
