--- a/src/assets/style/layouts/_default.scss
+++ b/src/assets/style/layouts/_default.scss
@@ -2,21 +2,23 @@
   width: 100%;
   height: 100%;
 
+  .routerContainer {
+    min-height: $minRouteHeightMain;
+    margin: 1rem auto;
+    width: 100%;
+  }
+
   .tileBlock {
     width: 90%;
     max-width: 505px;
     height: auto;
-    min-height: 500px;
-    //margin-top: 15px;
-    //margin-top: 35px;
     margin-right: auto;
     margin-left: auto;
     padding: 20px;
     border-radius: $borderRadius;
     box-shadow: 4px 4px 8px 0 rgba(11, 52, 102, 0.02);
     transition: background-color $transition1;
-    &.accountBlock
-    {
+    &.accountBlock {
       min-height: 0;
     }
 
@@ -193,8 +195,7 @@ em.iconInfo {
   }
 }
 
-@media (min-width: $mobile)
-{
+@media (min-width: $mobile) {
   .defaultLayout
   {
     justify-content: stretch;
@@ -205,37 +206,6 @@ em.iconInfo {
     @supports (-webkit-touch-callout: none) {
       //noinspection CssInvalidPropertyValue
       max-height: -webkit-fill-available;
-    }
-  }
-  main {
-    section.layoutContent {
-      min-height: min-content;
-      display: flex !important;
-      height: auto;
-      overflow: hidden;
-      flex-direction: column;
-      padding: 1rem 0;
-      gap: 1rem;
-      justify-content: stretch;
-
-      .routerContainer {
-        align-items: stretch;
-        display: flex !important;
-        height: auto;
-        overflow: hidden;
-        flex-direction: column;
-        gap: 1rem;
-        justify-content: stretch;
-
-        & > div {
-          display: flex !important;
-          height: auto;
-          overflow: hidden;
-          flex-direction: column;
-          gap: 1rem;
-          justify-content: stretch;
-        }
-      }
     }
   }
 }
