--- a/src/assets/style/pages/_contacts.scss
+++ b/src/assets/style/pages/_contacts.scss
@@ -4,14 +4,8 @@
     text-align: center;
   }
 
-  .tileBlock
-  {
+  .tileBlock {
     min-height: min-content;
-  }
-
-  .transactionsTile {
-    //height: $minRouteHeightMain !important;
-    //min-height: 200px !important;
   }
 }
 
