--- a/src/assets/style/layouts/_default.scss
+++ b/src/assets/style/layouts/_default.scss
@@ -8,104 +8,6 @@
     width: 100%;
   }
 
-  .tileBlock {
-    width: 90%;
-    max-width: 505px;
-    height: auto;
-    margin-right: auto;
-    margin-left: auto;
-    padding: 20px;
-    border-radius: $borderRadius;
-    box-shadow: 4px 4px 8px 0 rgba(11, 52, 102, 0.02);
-    transition: background-color $transition1;
-    &.accountBlock {
-      min-height: 0;
-    }
-
-    .tileHeadline {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 100%;
-      margin: 0;
-      padding-bottom: 20px;
-      font-weight: 400;
-      font-family: $firaSans;
-      text-align: center;
-
-      &.withBtn {
-        display: grid;
-        grid-template-rows: 100%;
-        grid-template-columns: 40px 1fr;
-        align-items: center;
-        padding-right: 40px;
-      }
-
-      @media (max-width: $mobile) {
-        font-size: 22px;
-
-        &.withBtn {
-          grid-template-columns: 30px 1fr;
-          padding-right: 30px;
-
-          .returnBtn i {
-            width: 30px;
-            height: 30px;
-            font-size: 16px;
-            line-height: 30px;
-          }
-        }
-      }
-
-      i {
-        display: block;
-        width: 25px;
-        height: 25px;
-        margin-left: 10px;
-        font-size: 11px;
-        line-height: 26px;
-        background: transparentize($color: $gray, $amount: 0.7);
-        border-radius: 50%;
-        transform: translateY(1px);
-        cursor: pointer;
-        opacity: 0.9;
-        transition: background-color $transition1;
-
-        &:hover {
-          background: transparentize($color: $gray, $amount: 0.5);
-        }
-      }
-
-      .returnBtn {
-        display: block;
-        text-decoration: none;
-
-        i {
-          width: 40px;
-          height: 40px;
-          margin-left: 0;
-          font-size: 20px;
-          line-height: 40px;
-          transition: color $transition1;
-        }
-      }
-    }
-
-    .tileText {
-      margin: 5px 0;
-      font-size: 16px;
-      text-align: center;
-    }
-  }
-
-  .tileTextBg {
-    margin: 5px 0;
-    padding: 12px 15px;
-    font-size: 15px;
-    text-align: center;
-    border: 1px solid;
-    border-radius: $borderRadiusMd;
-  }
 
   @media (max-width: $mobile) {
     footer {
@@ -125,8 +27,10 @@ body.inkline.-light .defaultLayout {
   .tileBlock {
     background: $white;
 
-    .tileHeadline .returnBtn i {
-      color: $black;
+    .tileHeadline .returnBtn {
+      i, .ov-icon {
+        color: $black;
+      }
     }
   }
 
@@ -140,8 +44,10 @@ body.inkline.-dark .defaultLayout {
   .tileBlock {
     background: $darkViolet;
 
-    .tileHeadline .returnBtn i {
-      color: $white;
+    .tileHeadline .returnBtn {
+      i, .ov-icon {
+        color: $white;
+      }
     }
   }
 
