--- a/src/assets/style/layouts/_index.scss
+++ b/src/assets/style/layouts/_index.scss
@@ -3,9 +3,8 @@
     //min-height: $minRouteHeight;
     //min-height: calc(100vh - 70px - 105px);
 
-    .dappPageWrapper
-    {
-      &>*{
+    .dappPageWrapper {
+      & > * {
         margin: 1rem 0;
       }
     }
@@ -80,14 +79,18 @@
     padding: 20px 30px;
 
     &.-dark {
-      .iconsBlock a i {
-        color: $darkViolet;
+      .iconsBlock a {
+        i, .ov-icon {
+          color: $darkViolet;
+        }
       }
     }
 
     &.-light {
-      .iconsBlock a i {
-        color: $white;
+      .iconsBlock a {
+        i, .ov-icon {
+          color: $white;
+        }
       }
     }
 
@@ -128,7 +131,7 @@
           background-color: $violet;
           border-radius: 50%;
 
-          i {
+          i, .ov-icon {
             display: block;
             width: 100%;
             height: 100%;
