--- a/src/assets/style/pages/_contacts.scss
+++ b/src/assets/style/pages/_contacts.scss
@@ -19,6 +19,15 @@
   flex-direction: column;
   //height: $minRouteHeightWithExtra !important;
   min-height: 300px;
+  .tileHeadline
+  {
+    display: flex;
+    align-items: stretch;
+    span
+    {
+      line-height: 24px;
+    }
+  }
 }
 
 .contactsListContainer {
@@ -112,18 +121,6 @@
         }
       }
     }
-  }
-
-  .nothingFound {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    text-align: center;
-    margin: 2rem 0;
   }
 }
 
